# python_mlfactor

./: pyproject.toml
data/: ff_factors.csv
notebooks/: Chapter_3_Factor_investing_and_asset_pricing_anomalies.ipynb  Chapter_4_Data_preprocessing.ipynb
