[tool.poetry]
name = "py_mlfactor"
version = "0.0.0"
description = "Code used in mlfactor book rewritten in python"
authors = ["ryansdowning"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23.2"
numpy = "^1.19.2"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
